<resources>
    <string name="app_name">Readya</string>
    <string name="welcome_message">Bienvenido a ReadYa</string>
    <string name="login_message_btn">Inicia sesión</string>
    <string name="register_message_btn">Registrate</string>
    <string name="continue_without_login">Continua sin iniciar sesión</string>
    <string name="email_placeholder">Correo electrónico</string>
    <string name="password_placeholder">Contraseña</string>
    <string name="forgotpassword_placeholder">¿No recuerdas tu contraseña?</string>
    <string name="no_account_message">¿No tienes cuenta? <b>Registrate</b></string>
    <string name="has_account_message">¿Ya tienes una cuenta?</string>
    <string name="user_placeholder">Usuario</string>
    <string name="confirmpassword_placeholder">Confirmar contraseña</string>
    <string name="dashboard_user">Dashboard del usuario</string>
    <string name="dahsboard_admin">Dashboard del admin</string>
    <string name="email_example">abc@example.com</string>
    <string name="add_category_button">+ Añadir Categoría</string>
    <string name="anadir_nuevo_libro">+ Añadir nuevo libro</string>
    <string name="add_category_title">Añadir nueva categoría</string>
    <string name="title_category">Nombre de la categoría</string>
    <string name="add_category_button2">Agregar</string>
    <string name="search_category">Buscar categoría</string>
    <string name="category">Categoría</string>
    <string name="book_title">Título del libro</string>
    <string name="book_description">Descripción del libro</string>
    <string name="upload_pdf">Subir PDF</string>
    <string name="books">Libros</string>
    <string name="search">Buscar</string>
    <string name="add">Añadir</string>
    <string name="book_size">13MB</string>
    <string name="book_date">dd/MM/yyyy</string>
    <string name="add_book">Añadir nuevo libro</string>
    <string name="details_title">Detalles del libro</string>
    <string name="read_book">Leer libro</string>
    <string name="title_book">Título del libro</string>
    <string name="description_book">Descripción del libro</string>
    <string name="category_book">Categoría</string>
    <string name="size_book">Tamaño</string>
    <string name="date_book">dd/MM/yyyy</string>
    <string name="date">Fecha</string>
    <string name="size">Tamaño</string>
    <string name="views">Vistas</string>
    <string name="pages">Páginas</string>
    <string name="nothing">N/N</string>
    <string name="nothing2">N/A</string>
    <string name="search_book">Buscar libro</string>
    <string name="read">Leer</string>
    <string name="download">Descargar</string>
    <string name="favorite">Añadir a favoritos</string>
    <string name="edit">Editar</string>
    <string name="edit_book">Editar libro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>