<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/teal_green"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PdfAddActivity">

    <!--Toolbar-->
    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/shape_toolbar01">

        <!--Back button-->
        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back_white"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:padding="5dp"/>

        <!--Icon Image-->
        <ImageView
            android:id="@+id/iconIv"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/backBtn"/>

        <!--Title-->
        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_book"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/iconIv"
            android:textSize="28sp"
            android:textColor="@color/white"/>
    </RelativeLayout>

    <!--Book title-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="280dp"
        app:hintEnabled="false">

        <EditText
            android:id="@+id/titleEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext01"
            android:drawableStart="@drawable/ic_book_white"
            android:hint="@string/book_title"
            android:drawablePadding="10dp"
            android:inputType="textPersonName|textCapWords"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Description-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="12dp"
        app:hintEnabled="false"
        android:layout_below="@+id/titleTil">

        <EditText
            android:id="@+id/descriptionEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edittext01"
            android:drawableStart="@drawable/ic_book_white"
            android:hint="@string/book_description"
            android:drawablePadding="10dp"
            android:inputType="textPersonName|textCapWords"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/white"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--Category-->
    <TextView
        android:id="@+id/categoryTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionTil"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="12dp"
        android:padding="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:drawablePadding="12dp"
        android:background="@drawable/shape_edittext01"
        android:hint="@string/category"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_down_white"
        app:drawableStartCompat="@drawable/ic_category_white" />

    <!--Attach-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/attachPdfBtn"
        android:duplicateParentState="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_attach_white"
        android:padding="15dp"
        android:background="@drawable/shape_button_filled"
        android:layout_below="@id/categoryTv"
        android:text="@string/upload_pdf"
        android:layout_marginTop="12dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textAllCaps="false"
        android:drawableStart="@drawable/ic_attach_teal"
        android:textColor="@color/teal_green"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/attachPdfBtn"
        android:layout_marginTop="15dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:padding="20dp"
        android:text="@string/add"
        android:textAllCaps="false"
        android:background="@drawable/shape_button01"
        android:textColor="@color/white"
        android:textSize="18sp"/>


</RelativeLayout>