<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_green"
    tools:context=".DashboardAdminActivity">

    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/shape_toolbar01">

        <!-- ImageButton: Open profile -->
        <ImageButton
            android:id="@+id/profileBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_person_white"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp" />


        <TextView
            android:id="@+id/titleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:text="@string/dahsboard_admin"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/subTitleTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/titleTv"
            android:text="@string/email_example"
            android:textColor="@color/white"/>

        <ImageButton
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_logout_white"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"/>

    </RelativeLayout>

    <!-- Search -->
    <EditText
        android:id="@+id/searchEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarRL"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/white"
        android:drawableStart="@drawable/ic_search_gray"
        android:hint="@string/search_category"
        android:padding="10dp"
        android:textColorHint="@color/gray01"
        android:radius="10dp" />


    <!-- Categories -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categoriesRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/searchEt"
        android:layout_above="@id/bottomLl"
        android:layout_margin="5dp"
        tools:listitem="@layout/row_category"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


    <!--Bottom Layout-->
    <LinearLayout
        android:id="@+id/bottomLl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">


        <!--Add Category-->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/addCategoryBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_button01"
            android:elevation="4dp"
            android:text="@string/add_category_button"
            android:textAllCaps="false"
            android:layout_marginEnd="10dp"
            android:textColor="@color/white" />

        <!--Add Pdf-->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addPdfFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/dark_blue"
            app:fabCustomSize="50dp"
            android:src="@drawable/ic_pdf_white"
            app:tint="@color/white" />

    </LinearLayout>

</RelativeLayout>